# okg_media_discourse

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: app.py
app/utils/: graph_vis.py  path_info.py  read_data.py  streamlit_helpers.py
ontology/: config-orig.properties  config.properties  obs.ttl  observatory.owl
ontology/obio/doc/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
ontology/obio/doc/provenance/: provenance-en.html  provenance-en.ttl
ontology/observatory/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
ontology/observatory/OOPSevaluation/: oopsEval.html
ontology/observatory/provenance/: provenance-en.html  provenance-en.ttl
ontology/observatory/sections/: abstract-en.html  crossref-en.html  description-en.html  overview-en.html
ontology/observatory/webvowl/data/: ontology.json
settings/: __init__.py
src/: call_api.py  cluster_embeddings.py  convert_triples.py  get_metrics.py  get_shortest_path.py  get_type_entities.py  get_vocab.py  graph.py  graphdb.py  helpers.py  logger.py  main.py  preprocess_json.py  rank_paths.py  run_api_mp.py
src/build_kg/: add_super_string.py  build_kg_from_pb.py  build_kg_from_triples.py
src/features/: call_pb_grammar.py  extract_other_features.py  get_description_pred.py  pre_process.py
src/paths/: collapse.py  get_primitives.py  get_scores.py
src/propbank_grammar/: call_pb_grammar.py  extract_other_features.py  get_description_pred.py  pre_process.py
validation/: shacl-shapes-validation.ttl  sparql-queries-validation.txt
